--- a/MyGallery/outlines.css
+++ b/MyGallery/outlines.css
@@ -5,7 +5,7 @@
     font-size: 70px;
     text-align: center;
     color: #0703AB;
-    padding-bottom: 0;
+    padding: 50px 0 0;
 }
 
 .body, html {
@@ -24,18 +24,23 @@
 }
 
 .menu {
+    position: fixed;
+    background-color: #FFD9D3;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 0;
 }
 
 .menu__list {
-    padding: 20px 40px 0 40px;
+    padding: 0 40px 0 40px;
     list-style: none;
     margin: 0;
-    display: flex;
     gap: 30px;
+    display: flex;
 }
 
 .menu__item {
-    display: inline-block;
 }
 
 .menu__link {
@@ -61,6 +66,10 @@
     margin-top: 50px;
 }
 
+.my-paintings__images {
+    display: flex;
+}
+
 .my-paintings__image {
     background-image: url("images/tree.jpg");
 }
@@ -77,6 +86,7 @@
 .my-paintings__painting-item {
     height: 400px;
     width: auto;
+    margin-bottom: 50px;
 }
 
 .my-paintings__header__location {
@@ -99,22 +109,42 @@
 }
 
 .about-me__content {
+    display: flex;
+    height: 100%;
+    align-self: stretch;
+}
+
+.about-me__text {
     text-decoration: none;
     font-family: "Kanit", sans-serif;
     font-weight: 500;
     font-style: italic;
     font-size: 30px;
     color: #0703AB;
-    border: #0703AB solid 2px;
+    /*border: #0703AB solid 2px;*/
     border-radius: 20px;
+    height: 100%;
     box-shadow: 6px 6px 16px rgba(07, 03, 171, 0.5);
-    /*background-color: #FAFAFA;*/
+}
+
+.about-me__right-part {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.about-me__musya-image {
+    height: 200px;
+    width: auto;
+    align-self: center;
+    justify-content: center;
 }
 
 .about-me__content__center {
     margin: 30px;
     padding: 10px;
     text-align: center;
+    justify-content: center;
 }
 
 .about-me__image {
@@ -128,7 +158,13 @@
     font-family: "Kanit", sans-serif;
     color: #FFD9D3;
     padding: 20px;
-    margin: 20px 20px;
+    margin: 20px 50px;
+    width: 100%;
+}
+
+.my-favourite-artists {
+    display: flex;
+    justify-content: space-around;
 }
 
 .my-favourite-artists__header {
@@ -152,6 +188,10 @@
     font-size: 20px;
 }
 
+.zabeyki__images {
+    display: flex;
+}
+
 .zabeyki__header {
     text-decoration: none;
     font-family: "Kanit", sans-serif;
@@ -172,6 +212,11 @@
     text-align: center;
 }
 
+.contacts__content {
+    display: flex;
+    justify-content: space-between;
+}
+
 .contacts__link {
     text-decoration: none;
     font-family: "Kanit", sans-serif;
@@ -188,3 +233,72 @@
     height: 350px;
     width: auto;
 }
+
+@media screen and (max-width: 768px) {
+    .about-me__musya-image {
+        display: none;
+    }
+    .about-me__image {
+        height: 200px;
+        width: auto;
+        align-self: flex-end;
+    }
+}
+
+thead {
+    background-color: #FFD9D3;
+}
+
+th, td {
+    padding: 12px 15px;
+    border: 3px solid #0703AB;
+    text-align: center;
+}
+
+th {
+    background-color: #0703AB;
+    color: #FFD9D3;
+    text-decoration: none;
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #FAFAFA;
+    color: #0703AB;
+    text-decoration: none;
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-size: 10px;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: #FFD9D3;
+    color: #0703AB;
+    text-decoration: none;
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-size: 10px;
+}
+
+tbody tr:hover {
+    background-color: #5E7600;
+    color: #FFD9D3;
+    text-decoration: none;
+    font-family: "Kanit", sans-serif;
+    font-weight: 700;
+    font-size: 10px;
+}
+
+table {
+    border-collapse: collapse;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.table {
+    display: flex;
+    justify-content: center;
+}
+
