--- a/MyGallery/outlines.css
+++ b/MyGallery/outlines.css
@@ -53,8 +53,21 @@
     padding: 0 16px;
 }
 
+.load-time {
+    text-align: center;
+    text-decoration: none;
+    font-family: "Kanit", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    color: #0703AB;
+    font-size: 20px;
+}
 .menu__link:hover {
     font-style: italic;
+}
+
+.menu__link.active {
+    font-weight: 500;
 }
 
 .menu__item__position-left {
